# wot-r-the-odds

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
exercises/: quiz1.rs
exercises/functions/: functions1.rs  functions3.rs
exercises/if/: if1.rs
exercises/move_semantics/: move_semantics2.rs
exercises/variables/: variables2.rs  variables4.rs  variables5.rs
src/: main.rs
