[package]
name = "wot-r-the-odds"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
colored = "2.0.0"

[profile.release]
strip = true  
opt-level = "z" 
lto = true
codegen-units = 1
panic="abort"
